test/rationalLiteral1.slq

def main(){
	return 1e-10:!ℤ; /// error
}
